--- a/public/vanilla.html
+++ b/public/vanilla.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supermarket - Vanilla JS Version</title>
+  <title>React vs Vanilla JS</title>
   <link rel="stylesheet" href="/styles/style.css">
   <script src="/scripts/vanilla.js" defer></script>
 </head>
