feat: add favicon and ajust cart background

--- a/public/vanilla.html
+++ b/public/vanilla.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React vs Vanilla JS</title>
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <script src="/scripts/vanilla.js" defer></script>
 </head>
 <body class="background">
