--- a/public/vanilla.html
+++ b/public/vanilla.html
@@ -10,7 +10,7 @@
 </head>
 <body class="background">
   <div class="container">
-    <h1 class="title">Supermarket - Vanilla JS Version</h1>
+    <div class="title">Supermarket - Vanilla JS Version</div>
     <div class="content">
       <div id="product-list" class="product-list"></div>
       <div id="cart" class="cart"></div>
